UI - Fix icon alignment

--- a/src/main/resources/www/css/app.css
+++ b/src/main/resources/www/css/app.css
@@ -776,7 +776,11 @@ h1 {
 
 .nsicon {
 	display: inline-block;
-	vertical-align: text-top;
+}
+
+.nsicon-container {
+	display: inline-block;
+	vertical-align: middle;
 }
 
 .nstable {
